# minotaur

./: CITATION.cff  Makefile  README.md
.github/workflows/: ci.yml
configs/: baseline.toml  sweep.toml
docs/: API_REFERENCE.md  Feasibility Corridor Characterization and Sensitivity Trade-offs in Reduced-Order Turbofan Cycle Models.md  MINOTAUR: A Deterministic Reduced-Order Framework for Compact Turbofan Cycle Analysis with Hard Constraint Enforcement.md  Modular Component Architectures for Reduced-Order Turbofan Cycle Models: Design Patterns and Validation.md  REPRODUCIBILITY.md  Systematic Degradation Analysis for Turbofan Cycle Models: Methodology, Implementation, and Comparative Results.md  USER_GUIDE.md  thesis_nonlocal_eft_review_part1.tex
plots/: pareto_front.gp  plot_fuel_vs_bpr.gp  plot_iter_vs_regime.gp  plot_t4_margin.gp
python/: Cargo.toml  pyproject.toml
python/examples/: optimization_workflow.ipynb  quickstart.ipynb
python/minotaur/: __init__.py
python/src/: lib.rs
results/: README.md  schema.json  synthetic_baseline.csv
src/fortran/: fpm.toml
src/fortran/src/: components.f90  cycle_solver.f90  cycle_solver_ad.f90  dual_numbers.f90  extended_thermo.f90  invariants.f90  minotaur_api.f90  minotaur_types.f90  numerics.f90  physics_options.f90  thermo.f90
src/rust/: Cargo.toml  build.rs
src/rust/src/: config.rs  ffi.rs  io.rs  main.rs  nsga2.rs  tests.rs
tests/: smoke.sh
tests/baselines/: config_01_nominal.toml  config_02_low_altitude.toml  config_03_high_altitude.toml  config_04_low_opr.toml  config_05_high_opr.toml  config_06_high_bpr.toml  config_07_low_efficiency.toml  config_08_high_efficiency.toml  config_09_sea_level.toml  config_10_transonic.toml  config_11_degraded_moderate.toml
