[package]
name = "minotaur"
version = "2.9.0"
edition = "2021"
license = "LicenseRef-EINIXSA-Internal-Eval"
authors = ["CSTNSystems","EINIXSA"]
description = "CSTNSystems/MINOTAUR - Deterministic reduced-order turbofan cycle solver"
repository = "https://github.com/CSTNSystems/minotaur"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
